# Nashoba-Robotics2013

./: .cproject  .gitignore  .gitignore.orig  .project  .project~  .wrproject  .wrproject~  Arduino.cpp  Arduino.h  CMakeLists.txt  CommandBase.cpp  CommandBase.h  CommandBasedRobot.h  CoprocessorVision.cpp  CoprocessorVision.h  Gamepad.hpp  HardwareSettings.h  Nashoba Robotics 2013 V2.yml  OI.cpp  OI.cpp~  OI.h  OperatorInput.cpp  OperatorInput.h  README.md  Robot.cpp  Robot.cpp.orig  Robot.cpp~  Robot.h  RobotMap.cpp  RobotMap.cpp.orig  RobotMap.h  RobotMap.h.orig  RobotMap.h~  XPad.h
Commands/: AngelDeployCommand.cpp  AngelDeployCommand.h  AngelIdleCommand.cpp~  AngelIdleCommand.h~  AngelUndeployCommand.cpp~  AngelUndeployCommand.h~  ArticulatedActivateCommand.cpp~  ArticulatedActivateCommand.h  ArticulatedDeployCommand.cpp  ArticulatedDeployCommand.h  ArticulatedExtendCommand.cpp  ArticulatedExtendCommand.h~  ArticulatedIdleCommand.cpp  ArticulatedIdleCommand.h  ArticulatedInactivateCommand.cpp  ArticulatedInactivateCommand.h~  ArticulatedUndeployCommand.cpp  ArticulatedUndeployCommand.h~  ArticulatedUnextendCommand.cpp  ArticulatedUnextendCommand.cpp~  ArticulatedUnextendCommand.h~  ArticulatinStopCommand.cpp  ArticulatinStopCommand.h  ArticulatingDeployCommand.cpp  ArticulatingDeployCommand.h~  ArticulatingExtendCommand.cpp  ArticulatingExtendCommand.cpp~  ArticulatingExtendCommand.h  ArticulatingIdleCommand.cpp  ArticulatingIdleCommand.cpp~  ArticulatingIdleCommand.h  ArticulatingUndeployCommand.cpp  ArticulatingUndeployCommand.cpp~  ArticulatingUndeployCommand.h~  (+134 more)
(+243 files in other folders)
